--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.1.1'
@@ -34,4 +35,12 @@ dependencies {
 
     //dependency for text align-justify
     implementation 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
+
+    //dependency for recyclerview
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    //dependecy for picasso for image loading
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
