Added all content for HW4

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -32,15 +32,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     //dependency for text align-justify
     implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
-
     //dependency for recyclerview
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     //dependecy for picasso for image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
-
 }
