--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //dependency for text align-justify
     implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
@@ -39,4 +37,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     //dependecy for picasso for image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //adding test dependencies for HW5
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
